src/test/ui/borrowck/borrowck-mut-addr-of-imm-var.stderr
error[E0596]: cannot borrow immutable local variable `x` as mutable
  --> $DIR/borrowck-mut-addr-of-imm-var.rs:3:30
   |
LL |     let x: isize = 3;
   |         - help: make this binding mutable: `mut x`
LL |     let y: &mut isize = &mut x;
   |                              ^ cannot borrow mutably

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
